# ITVE

./: .env  main.py  pyproject.toml
config/: db.py
routes/: post_route.py  user_route.py
utils/: util_helper.py
validations/: post_validation.py  validation.py
